<resources>
    <string name="app_name">Cook Joy App</string>
    <string name="cook_joy">Cook Joy</string>
    <string name="let_s_go">Let\'s Go</string>
    <string name="next">Next</string>
    <string name="search_your_recipes">Search Your Recipes</string>
    <string name="explore_over_10_000_delicious_recipes_from_around_the_world">Explore over 10,000 delicious recipes from around the world</string>
    <string name="next1">Next</string>
    <string name="save_your_favorites">Save Your Favorites</string>
    <string name="save_your_favorite_recipes_for_easy_access">Save your favorite recipes for easy access.</string>
    <string name="you_can_follow_simple_steps_for_delicious_recipes">You can follow simple steps for delicious recipes.</string>
    <string name="next2">Next</string>
    <string name="follow_easy_steps">Follow Easy Steps</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="hello">Hello,</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_email">Enter Email</string>
    <string name="email">Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password</string>
    <string name="mango_cheese_and_avocado_salad">Mango Cheese and Avocado Salad</string>
    <string name="creamy_chicken_veggie_wrap">Creamy Chicken Veggie Wrap</string>
    <string name="beetroot_fillo">Beetroot Fillo</string>
    <string name="most_popular_recipes">Most Popular Recipes</string>
    <string name="caramel_pancake">Caramel Pancake</string>
    <string name="samosa_potli">Samosa Potli</string>
    <string name="recommand_for_you">Recommand For You</string>
    <string name="sesame_paneer">Sesame Paneer</string>
    <string name="caramel_pancake1">Caramel Pancake</string>
    <string name="creamy_chicken_veggie_wrap1">Creamy Chicken Veggie Wrap</string>
    <string name="beetroot_fillo1">Beetroot Fillo</string>
    <string name="browse_recipes">Browse Recipes</string>
    <string name="cookjoy">CookJoy</string>
    <string name="srilankan">Srilankan</string>
    <string name="indian">Indian</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="which_one_would_you_love">Which One Would You Love ?</string>
    <string name="hello_foodie">Hello Foodie,</string>
    <string name="seatch_your_recipe">Seatch Recipe</string>
    <string name="caramel_pancake2">Caramel Pancake</string>
    <string name="mango_cheese_and_avocado_salad1">Mango Cheese and Avocado Salad</string>
    <string name="creamy_samosa_potli">Creamy Samosa Potli</string>
    <string name="dahi_kebab">Dahi Kebab</string>
    <string name="sri_lankn_recipes">Sri Lankn Recipes</string>
    <string name="mango_cheese_and_avocado_salad2">Mango Cheese and Avocado Salad</string>
    <string name="creamy_samosa_potli1">Creamy Samosa Potli</string>
    <string name="dahi_kebab1">Dahi Kebab</string>
    <string name="japanese_recipes">Japanese Recipes</string>
    <string name="caramel_pancake3">Caramel Pancake</string>
    <string name="indian_recipes">Indian Recipes</string>
    <string name="chinese_recipes">Chinese Recipes</string>
    <string name="welcome">Welcome,</string>
    <string name="thiyara">Thiyara</string>
    <string name="thiyaragune">Name : Thiyara Gunawardena</string>
    <string name="country">Country : Srilanka</string>
    <string name="thiyaragmail">Email : thiyara@gmail.com</string>
    <string name="gender_male">Gender : Female</string>
    <string name="date_of_birth_10_02_2002">Date Of Birth : 10/02/2002</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="ingredients">Ingredients</string>
    <string name="procedure">Procedure</string>
    <string name="_2_egg_1_cup_refined_flour_1_2_teaspoon_vanilla_essence_1_tablespoon_vegetable_oil_1_2_cup_milk_3_tablespoon_sugar_1_2_banana_1_4_teaspoon_salt">2 egg 1 cup refined flour 1/2 teaspoon vanilla essence 1 tablespoon vegetable oil 1/2 cup milk 3 tablespoon sugar 1/2 banana 1/4 teaspoon salt</string>
    <string name="step_1_whisk_the_eggs_in_a_bowl_crack_open_the_two_eggs_add_salt_and_1_tbsp_sugar_whisk_really_well_to_combine_the_ingredients_together_step_2_make_the_pancake_batter_add_milk_refined_flour_and_vanilla_essence_mix_really_well_to_form_a_smooth_batter_step_3_make_caramel_mixture">Step 1 Whisk the eggs In a bowl, crack open the two eggs. Add salt and 1 tbsp sugar. Whisk really well to combine the ingredients together. Step 2 Make the pancake batter Add milk, refined flour and vanilla essence. Mix really well to form a smooth batter. Step 3 Make caramel mixture</string>
    <string name="profile">Profile</string>
    <string name="country_srilankal">Country : Srilanka</string>
    <string name="find_your_categories">Find Your Categories</string>
    <string name="discover_new_flavours">Discover New Flavours</string>
</resources>