<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sribtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgclr"
    tools:context=".Browse">

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="482dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="140dp">

                <ImageButton
                    android:id="@+id/sribtn1"
                    android:layout_width="153dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img2" />

                <Button
                    android:id="@+id/sribtn11"
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="50dp"

                    android:backgroundTint="@color/btngo"
                    android:text="@string/srilankan"
                    android:textStyle="bold" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="151dp"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img1" />

                <Button
                    android:id="@+id/inbtn2"
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/btngo"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="50dp"
                    android:text="@string/indian" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="147dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img5" />

                <Button
                    android:id="@+id/inbtn3"
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/btngo"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="50dp"
                    android:text="@string/chinese" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="147dp"
                    android:layout_height="118dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img7" />

                <Button
                    android:id="@+id/inbtn4"
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/btngo"
                    android:layout_gravity="center|right"
                    android:layout_marginRight="50dp"
                    android:text="@string/japanese" />

            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <TextView

        android:layout_width="149dp"
        android:layout_height="29dp"
        android:text="Categories"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <TextView

        android:id="@+id/textView16"
        android:layout_width="366dp"
        android:layout_height="36dp"
        android:text="@string/which_one_would_you_love"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_foodie"
        android:textColor="@color/btngo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.297" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="167dp"
        android:layout_height="35dp"
        android:ems="10"
        android:hint="@string/search_your_recipes"
        android:inputType="text"
        android:text="@string/seatch_your_recipe"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:queryHint="Hello"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

</androidx.constraintlayout.widget.ConstraintLayout>